test_translator/tests/data/checkpoint_2/core/pass/90_exception_any/solution.js
export function might_raise() {
    throw new Error("an error occurred");
}
