test_translator/tests/data/checkpoint_2/core/fail/90_exception_any/solution.js
export function might_raise() {
    return null;
}
